# Bytestore

./: .gitignore  Cargo.toml  README.md
benches/: bitvec.rs  map.rs  number_seq.rs
src/: deser.rs  error.rs  header.rs  lib.rs  main.rs  utils.rs
src/backend/: growable.rs  memory.rs  mmap.rs  mmap_mut.rs  mod.rs
src/backend/base/: mod.rs  sub.rs  sub_mut.rs
src/backend/full/: mod.rs
src/components/: mod.rs
src/components/bitvec/: iter.rs  mod.rs
src/components/header_file/: mod.rs
src/components/indexed_file/: entry.rs  iter.rs  mod.rs
src/components/list/: iter.rs  mod.rs  presets.rs
src/components/list/cint/: header.rs  mod.rs
src/components/list/cint/index/: entry.rs  mod.rs
src/components/map/: insertion.rs  iter.rs  kvpair.rs  metadata.rs  mod.rs  primes.rs
src/components/map/hashing/: hash.rs  hashfn.rs  mod.rs
src/components/metadata/: mod.rs
src/components/multi_file/: entry_mut.rs  mod.rs
src/components/number_seq/: iter.rs  mod.rs
src/components/number_seq/compressed/: iter.rs  mod.rs
src/components/split_file/: backend_index.rs  entry.rs  header.rs  mod.rs
src/traits/: collection.rs  creatable.rs  initiable.rs  mod.rs  mtype.rs  sized_deser.rs
